--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,71 @@ body {
   font-family: "Roboto Mono", monospace;
   text-align: center;
 }
+
+#calculator {
+  display: flex;
+  min-height: 95vh;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+  background-color: azure;
+}
+
+#container {
+  background-color: black;
+  border: 10px solid rgb(47, 47, 47);
+  border-radius: 4px;
+  display: grid;
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: minmax(100px, auto) repeat(5, 80px);
+  gap: 2px;
+}
+
+#display {
+  grid-column: 1 / -1;
+  background-color: #b2b9b7;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-end;
+  padding: 5px;
+  font-size: 3.5em;
+  font-weight: initial;
+  text-shadow: 1.3px 1.3px #383838;
+  margin: 5px;
+}
+
+button {
+  margin: 1px;
+  border-radius: 5%;
+  border: none;
+  font-weight: initial;
+  font-size: 2em;
+  font-family: monospace;
+  color: black;
+}
+
+#zero {
+  grid-column: span 2;
+}
+
+.clear {
+  background-color: #e60000;
+}
+
+.operator {
+  background-color: gold;
+}
+
+.equals {
+  background-color: #ffad33;
+}
+
+.sign,
+.percent,
+.operand,
+.decimal {
+  background-color: #e6e6e6;
+}
